Fixed program title not being aligned with logo

--- a/wp-content/themes/PPTTheme/sass/_page-templates.scss
+++ b/wp-content/themes/PPTTheme/sass/_page-templates.scss
@@ -379,7 +379,7 @@
     font-family: $font__main;
     font-size: 76px;
     font-weight: 900;
-    line-height: 0.91;
+    line-height: 1;
     color: $color__background-body;
     position: absolute;
     top: 15px;
