--- a/wp-content/themes/PPTTheme/style.css
+++ b/wp-content/themes/PPTTheme/style.css
@@ -377,7 +377,7 @@ Description: A WordPress theme for Planned Parenthood Toronto
     font-family: Arial, sans-serif;
     font-size: 76px;
     font-weight: 900;
-    line-height: 0.91;
+    line-height: 1;
     color: #fff;
     position: absolute;
     top: 15px;
